ClusterSetup/Assignment1_Sol/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-client
  namespace: assignment1
  labels:
    app: apace_client
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command:
        ["sh", "-c", "while true; do curl -m 3 192.168.36.196; sleep 5; done"]
