ClusterSetup/Assignment1_Sol/default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: assignment1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
